[gd_scene load_steps=4 format=3 uid="uid://7y12byty7m0o"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_gpe4b"]
[ext_resource type="PackedScene" uid="uid://w07x6te4s4nw" path="res://Scenes/player.tscn" id="2_0ord7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wj1p"]
size = Vector2(41.6834, 66.5331)

[node name="Game" type="Node2D"]
script = ExtResource("1_gpe4b")

[node name="ObjectsSpawn" type="Timer" parent="."]
autostart = true

[node name="PlayableArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -704)
scale = Vector2(1, 1.52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableArea"]
position = Vector2(288, 552)
scale = Vector2(19.96, 19.96)
shape = SubResource("RectangleShape2D_0wj1p")

[node name="Player" parent="." instance=ExtResource("2_0ord7")]
position = Vector2(289, 872)
motion_mode = 1

[node name="ObstacleContainer" type="Node2D" parent="."]

[connection signal="timeout" from="ObjectsSpawn" to="." method="_on_objects_spawn_timeout"]
[connection signal="body_exited" from="PlayableArea" to="." method="_on_playable_area_body_exited"]
